# cnn-mnist-cpp

./: CMakeLists.txt  README.md  main.cpp
data/: conv1.out  conv2.out  dense.out
layers/: conv_layer.cpp  conv_layer.hpp  cross_entropy.cpp  cross_entropy.hpp  dense_layer.cpp  dense_layer.hpp  max_pool.cpp  max_pool.hpp  relu.cpp  relu.hpp  softmax.cpp  softmax.hpp
test/: test_conv_layer.cpp  test_max_pool.cpp  test_relu.cpp
utils/: mnist.cpp  mnist.hpp
